--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -105,8 +105,8 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
     <tr>
         <td>fileId</td>
         <td><code>[FILE-ID]</code></td>
-        <td></td>
-        <td>Required, contains the file ID of the new file. Use <code>"unique()"</code> for a UUID</td>
+        <td>n/a</td>
+        <td>Required, contains the file ID of the new file. Use <code>"unique()"</code> for a UUID.</td>
     </tr>
     <tr>
         <td>file</td>
@@ -117,7 +117,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
     <tr>
         <td>permissions</td>
         <td><code>[PERMISSION ARRAY]</code></td>
-        <td></td>
+        <td>n/a</td>
         <td>Required, declares which file this chunk belongs to.</td>
     </tr>
     </tbody>
