--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -46,7 +46,7 @@ X-Appwrite-Response-Format: 1.0.0
 <p>You don't need to create an account session before making requests to Server APIs. Simply pass an <a href="/docs/keys">API key</a> in the <code>X-Appwrite-key: [API-KEY]</code> header with the appropriate scopes.</p>
 
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
-    <pre class="line-numbers"><code class="prism language-http" data-prism>GET /databases/{databaseId}/collections/{collectionId}/documents HTTP/1.1
+    <pre class="line-numbers"><code class="prism language-http" data-prism>GET /v1/databases/{databaseId}/collections/{collectionId}/documents  HTTP/1.1
 Host: [HOSTNAME_OR_IP]
 Content-Type: application/json
 X-Appwrite-Project: [PROJECT_ID]
@@ -128,7 +128,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
 <p>The multipart form data posted to file upload endpoints has the following format:</p>
 
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
-    <pre class="line-numbers"><code class="prism language-http" data-prism>POST /v1/storage/buckets/default/files HTTP/1.1
+    <pre class="line-numbers"><code class="prism language-http" data-prism>POST /v1/storage/buckets/default/files  HTTP/1.1
 Host: [HOSTNAME_OR_IP]
 Content-Type: multipart/form-data; boundary=---WD9146A
 X-Appwrite-Project: demo-project
