Add to index + inline code formatting

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -89,6 +89,8 @@ $cols = [
                     <li><a href="/docs/permissions">Permissions</a></li>
                     <li><a href="/docs/error-codes">Error Codes</a></li>
                     <li><a href="/docs/rate-limits">Rate Limits</a></li>
+                    <li><a href="/docs/events">Events</a></li>
+
                 </ul>
             </nav>
         </div>
