--- a/app/views/docs/events.phtml
+++ b/app/views/docs/events.phtml
@@ -5,9 +5,9 @@ $events = $this->getParam('events', []);
 ?>
 <p>Appwrite provides a variety of events that allows your application to react to changes as they happen. A event will fire when a change occurs in your Appwrite project, like when a new user registers or a new file is uploaded to Appwrite. You can subscribe to these events to with Appwrite <a href="/docs/functions">Functions</a>, <a href="/docs/realtime">Realtime</a>, or <a href="/docs/webhooks">Webhooks</a>.</p>
 
-<p>You can subscribe to events for specific resources using their ID or subscribe to changes of all resource of the same type by using a wild card character "*". You can also filter for events of specific actions like "create", "update", or "delete". You can find a list of events for Storage, Databases, Functions, and Authentication services below.</p>
+<p>You can subscribe to events for specific resources using their ID or subscribe to changes of all resources of the same type by using a wildcard character <code>*</code> instead of an ID. You can also filter for events of specific actions like <code>create</code>, <code>update</code>, or <code>delete</code>. You can find a list of events for Storage, Databases, Functions, and Authentication services below.</p>
 
-<h2 id="storage-events"><a href="/docs/events#storage-events">Storage Service Events</a></h2>
+<h2 id="storage-events"><a href="/docs/events#storage-events">Storage Service</a></h2>
 
 <table class="full text-size-small vertical">
     <thead>
@@ -26,7 +26,7 @@ $events = $this->getParam('events', []);
     <?php if(str_starts_with($pattern, 'bucket')): ?>
     <tr>
         <td>
-            <?php echo $this->escape($pattern); ?>
+            <code><?php echo $this->escape($pattern); ?></code>
         </td>
         <td>
         <?php if(!empty($model)): ?>
@@ -40,7 +40,7 @@ $events = $this->getParam('events', []);
     </tbody>
 </table>
 
-<h2 id="databases-events"><a href="/docs/events#databases-events">Databases Service Events</a></h2>
+<h2 id="databases-events"><a href="/docs/events#databases-events">Databases Service</a></h2>
 
 <table class="full text-size-small vertical">
     <thead>
@@ -59,7 +59,7 @@ $events = $this->getParam('events', []);
     <?php if(str_starts_with($pattern, 'databases')): ?>
     <tr>
         <td>
-            <?php echo $this->escape($pattern); ?>
+        <code><?php echo $this->escape($pattern); ?></code>
         </td>
         <td>
         <?php if(!empty($model)): ?>
@@ -73,7 +73,7 @@ $events = $this->getParam('events', []);
     </tbody>
 </table>
 
-<h2 id="functions-events"><a href="/docs/events#functions-events">Functions Service Events</a></h2>
+<h2 id="functions-events"><a href="/docs/events#functions-events">Functions Service</a></h2>
 
 <table class="full text-size-small vertical">
     <thead>
@@ -92,7 +92,7 @@ $events = $this->getParam('events', []);
     <?php if(str_starts_with($pattern, 'bucket')): ?>
     <tr>
         <td>
-            <?php echo $this->escape($pattern); ?>
+            <code><?php echo $this->escape($pattern); ?></code>
         </td>
         <td>
         <?php if(!empty($model)): ?>
@@ -107,7 +107,7 @@ $events = $this->getParam('events', []);
 </table>
 
 
-<h2 id="authentication-events"><a href="/docs/events#authentication-events">Authentication Service Events</a></h2>
+<h2 id="authentication-events"><a href="/docs/events#authentication-events">Authentication Service</a></h2>
 
 <table class="full text-size-small vertical">
     <thead>
@@ -126,7 +126,7 @@ $events = $this->getParam('events', []);
     <?php if(str_starts_with($pattern, 'users') || str_starts_with($pattern, 'teams')): ?>
     <tr>
         <td>
-            <?php echo $this->escape($pattern); ?>
+            <code><?php echo $this->escape($pattern); ?></code>
         </td>
         <td>
         <?php if(!empty($model)): ?>
@@ -143,7 +143,7 @@ $events = $this->getParam('events', []);
 <h2 id="events-limitations"><a href="/docs/events#events-limitations">Known Limitations</a></h2>
 <p>When events fire, only existing subscriptions for that event will receive the update. If your client or server side integrations lose network connection temporarily, delivery of the event is not guaranteed.</p>
 <p>For self-hosted instances, when the Appwrite containers are shut down and restarted, events with pending webhooks and subscription updates will not be delivered.</p>
-<p>A change to a resource can cause multiple events to fire. For example adding a new document with ID "lion-king" to a collection called "movies" will cause all of the below events to fire.</p>
+<p>A change to a resource can cause multiple events to fire. For example adding a new document with ID <code>"lion-king"</code> to a collection with the ID <code>"movies"</code> will cause all of the below events to fire.</p>
 <div class="ide margin-top-small" data-lang="json" data-lang-label="JSON">
     <pre class="line-numbers"><code class="prism language-json" data-prism>{
     "events": [
