--- a/app/views/docs/webhooks.phtml
+++ b/app/views/docs/webhooks.phtml
@@ -11,7 +11,7 @@ $events = $this->getParam('events', []);
 
 <h2><a href="/docs/webhooks#payload" id="payload">Payload</a></h2>
 
-<p>Each event type has a specific payload format with the relevant event information. All event payloads mirror the payloads for the API payload which parallel to the <a href="/docs/webhooks#events">event types</a>.</p>
+<p>Each event type has a specific payload format with the relevant event information. All event payloads mirror the payloads for the API payload which parallel to the <a href="/docs/events">event types</a>.</p>
 
 <h2><a href="/docs/webhooks#headers" id="headers">Headers</a></h2>
 
@@ -38,7 +38,7 @@ $events = $this->getParam('events', []);
     </tr>
     <tr>
         <td>X-Appwrite-Webhook-Name</td>
-        <td>Name of the webhook as specified in your app settings and <a href="/docs/webhooks#events">events list</a>.</td>
+        <td>Name of the webhook as specified in your app settings and <a href="/docs/events">events list</a>.</td>
     </tr>
     <tr>
         <td>
@@ -149,35 +149,8 @@ let subscription = realtime.subscribe(channels: ["files"]) { message in
     </li>
 </ul> -->
 
-<h2 id="events"><a href="/docs/webhooks#events">Events</a></h2>
-
-<p>A list of all currently available events you can hook to:</p>
-
-<table class="full text-size-small vertical">
-    <thead>
-    <tr>
-        <th style="width: 240px;">Name</th>
-        <th style="width: 140px;">Payload</th>
-        <th>Description</th>
-    </tr>
-    </thead>
-    <tbody>
-    <?php foreach($events as $event):
-        $pattern = $event['pattern'] ?? '';
-        $description = $event['description'] ?? '';
-        $model = $event['model'] ?? '';
-    ?>
-    <tr>
-        <td>
-            <?php echo $this->escape($pattern); ?>
-        </td>
-        <td>
-        <?php if(!empty($model)): ?>
-            <a href="/docs/models/<?php echo $this->escape($model); ?>"><?php echo $this->escape(ucfirst($model)); ?> Object</a>
-        <?php endif; ?>
-        </td>
-        <td><?php echo $this->escape($description); ?></td>
-    </tr>
-    <?php endforeach; ?>
-    </tbody>
-</table>
+<h2 id="events"><a href="/docs/events">Events</a></h2>
+Appwrite has events that fire when a resource changes. These events cover all Appwrite resources and can reflect create, update, and delete actions. You can specify one or many events to subscribe to with webhooks.
+<ul>
+    <li class="margin-bottom"><a href="/docs/keys" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn more about events</a></li>
+</ul>
