--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -145,9 +145,9 @@ Content-Type: application/octet-stream
 
 [CHUNKED-DATA]
 ------WebKitFormBoundarye0m6iNBQNHlzTpVM
-Content-Disposition: form-data; name="permissions"
+Content-Disposition: form-data; name="permissions[]"
 
-["read(\"user:627a958ded6424a98a9f\")"]
+read("user:627a958ded6424a98a9f")
 ------WebKitFormBoundarye0m6iNBQNHlzTpVM--</code></pre>
 </div>
 
