--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -204,7 +204,7 @@ read("user:627a958ded6424a98a9f")
     </tr>
     <tr>
         <td><code>Role.guests()</code></td>
-        <td><code>"user:[ID]"</code></td>
+        <td><code>"guests"</code></td>
     </tr>
     <tr>
         <td><code>Role.users([STATUS])</code></td>
