Fix permission field description

--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -118,7 +118,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
         <td>permissions</td>
         <td><code>[PERMISSION ARRAY]</code></td>
         <td>n/a</td>
-        <td>Required, declares which file this chunk belongs to.</td>
+        <td>Required, contains an array of permission strings about who can access the new file.</td>
     </tr>
     </tbody>
 </table>
