--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -25,8 +25,22 @@
         <td><code>X-Appwrite-key: [API-KEY]</code></td>
         <td>Optional, used for authentication in server integrations. <b>Do not use API keys in client applications.</b></td>
     </tr>
+    <tr>
+        <td><code>X-Appwrite-Response-Format: [VERSION-NUMBER]</code></td>
+        <td>Optional, used for backwards compatibility. The response will be formatted to be compatible the provided version number.</td>
+    </tr>
+    <tr>
+        <td><code>X-Fallback-Cookies: [FALLBACK-COOKIES]</code></td>
+        <td>Optional, used in scenarios where browsers do not allow third-party cookies. Often used for <a href="/docs/custom-domains">Custom Domains</a>.</td>
+    </tr>
     </tbody>
 </table>
+
+<h3><a href="/docs/rest#no-headers" id="no-headers">Using Appwrite Without Headers</a></h3>
+<p>Some use cases do not allow the use of custom headers, such as when embedding images from Appwrite in HTML. In these cases, you can provide the Appwrite project ID using the query parameter <code>project</code>.</p>
+<div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
+    <pre class="line-numbers"><code class="prism language-http" data-prism><img src="https://[HOSTNAME_OR_IP]/v1/storage/buckets/[BUCKET_ID]/files/[FILE_ID]/preview?project=[PROJECT_ID]"></code></pre>
+</div>
 
 <h3>Client Authentication</h3>
 <p>You can create account sessions with POST requests to the <a href="docs/client/account">Account API</a>. Sessions are persisted using cookies like any other REST API. You can learn more about session persistence in the <a href="/docs/authentication#persistence">Authentication Guide</a>.</p>
@@ -238,6 +252,9 @@ Appwrite's SDKs have a helper <code>ID.unqiue()</code> to generate unique IDs. W
 <p>
 Appwrite's SDKs provides a <code>Query</code> class to generate query strings. When using Appwrite without an SDK, you can template your own strings with the format below.
 </p>
+
+<p>Query strings are passed to Appwrite using the <code>queries</code> query parameters. You can attack multiple query strings under the <code>queries</code> query parameter.</p>
+
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
@@ -248,55 +265,55 @@ Appwrite's SDKs provides a <code>Query</code> class to generate query strings. W
     <tbody>
         <tr>
             <td>equal</td>
-            <td><code>"equal(\"attribute\", [\"value1\", ...])"</code></td>
+            <td><code>equal("attribute", ["value1", ...])</code></td>
         </tr>
         <tr>
             <td>notEqual</td>
-            <td><code>"notEqual(\"attribute\", [\"value1\", ...])"</code></td>
+            <td><code>notEqual("attribute", ["value1", ...])</code></td>
         </tr>
         <tr>
             <td>lessThan</td>
-            <td><code>"lessThan(\"attribute\", [\"value1\", ...])"</code></td>
+            <td><code>lessThan("attribute", [value1, ...])</code></td>
         </tr>
         <tr>
             <td>lessThanEqual</td>
-            <td><code>"lessThanEqual(\"attribute\", [\"value1\", ...])"</code></td>
+            <td><code>lessThanEqual("attribute", [value1, ...])</code></td>
         </tr>
         <tr>
             <td>greaterThan</td>
-            <td><code>"greaterThan(\"attribute\", [\"value1\", ...])"</code></td>
+            <td><code>greaterThan("attribute", [value1, ...])</code></td>
         </tr>
         <tr>
             <td>greaterThanEqual</td>
-            <td><code>"greaterThanEqual(\"attribute\", [\"value1\", ...])"</code></td>
+            <td><code>greaterThanEqual("attribute", [value1, ...])</code></td>
         </tr>
         <tr>
             <td>search</td>
-            <td><code>"search(\"attribute\", [\"value1\", ...])"</code></td>
+            <td><code>search("attribute", [value1, ...])</code></td>
         </tr>
         <tr>
             <td>orderDesc</td>
-            <td><code>"orderDesc(\"attribute\")"</code></td>
+            <td><code>orderDesc("attribute")</code></td>
         </tr>
         <tr>
             <td>orderAsc</td>
-            <td><code>"orderAsc(\"attribute\")"</code></td>
+            <td><code>orderAsc("attribute")</code></td>
         </tr>
         <tr>
             <td>cursorAfter</td>
-            <td><code>"cursorAfter(\"documentId\")"</code></td>
+            <td><code>cursorAfter("documentId")</code></td>
         </tr>
         <tr>
             <td>cursorBefore</td>
-            <td><code>"cursorBefore(\"documentId\")"</code></td>
+            <td><code>cursorBefore("documentId")</code></td>
         </tr>
         <tr>
             <td>limit</td>
-            <td><code>"limit(0)"</code></td>
+            <td><code>limit(0)</code></td>
         </tr>
         <tr>
         <td>offset</td>
-            <td><code>"offset(0)"</code></td>
+            <td><code>offset(0)</code></td>
         </tr>
     </tbody>
 </table>
