Added membership string to REST docs

--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -236,6 +236,10 @@ read("user:627a958ded6424a98a9f")
         <td><code>Role.team([TEAM_ID], [ROLE])</td>
         <td><code>"team:[TEAM_ID]/[ROLE]"</code></td>
     </tr>
+    <tr>
+        <td><code>Role.member([MEMBERSHIP_ID])</td>
+        <td><code>"member:[MEMBERSHIP_ID]"</code></td>
+    </tr>
     </tbody>
 </table>
 
