--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -96,7 +96,7 @@
     </tr>
     <tr>
         <td>Role.member([MEMBERSHIP_ID])</td>
-        <td>Grants access to a specific member of a team. When the member is removed from the team, the permission is no longer valid.</td>
+        <td>Grants access to a specific member of a team. When the member is removed from the team, they will no longer have access.</td>
     </tr>
     </tbody>
 </table>
