--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -31,7 +31,7 @@
     </tr>
     <tr>
         <td><code>X-Fallback-Cookies: [FALLBACK-COOKIES]</code></td>
-        <td>Optional, used in scenarios where browsers do not allow third-party cookies. Often used for <a href="/docs/custom-domains">Custom Domains</a>.</td>
+        <td>Optional, used in scenarios where browsers do not allow third-party cookies. Often used when there is no <a href="/docs/custom-domains">Custom Domain</a>.</td>
     </tr>
     </tbody>
 </table>
