--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -22,7 +22,7 @@
         <td>Required, declares content type of the HTTP request.</td>
     </tr>
     <tr>
-        <td><code>X-Appwrite-key: [API-KEY]</code></td>
+        <td><code>X-Appwrite-Key: [API-KEY]</code></td>
         <td>Optional, used for authentication in server integrations. <b>Do not use API keys in client applications.</b></td>
     </tr>
     <tr>
