--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -64,7 +64,7 @@ X-Appwrite-Response-Format: 1.0.0
 Host: [HOSTNAME_OR_IP]
 Content-Type: application/json
 X-Appwrite-Project: [PROJECT_ID]
-X-Appwrite-key: [API_KEY]
+X-Appwrite-Key: [API_KEY]
 X-Appwrite-Response-Format: 1.0.0</code></pre>
 </div>
 
