Update storage example

--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -168,13 +168,13 @@ Content-Length: *Length of your entity body in bytes*
 --cec8e8123c05ba25
 Content-Disposition: form-data; name="operations"
 
-{ "query": "mutation { storageCreateFile(bucketId: $bucketId, fileId: $fileId, file: $file) { id }" }, "variables": { "bucketId": "[BUCKET_ID]", "fileId": "[FILE_ID]", "file": null } }
+{ "query": "mutation CreateFile($bucketId: String!, $fileId: String!, $file: InputFile!) { storageCreateFile(bucketId: $bucketId, fileId: $fileId, file: $file) { id } }", "variables": { "bucketId": "[BUCKET_ID]", "fileId": "[FILE_ID]", "file": null } }
 --cec8e8123c05ba25
 Content-Disposition: form-data; name="map"
 
 { "0": ["variables.file"] }
 --cec8e8123c05ba25
-Content-Disposition: form-data; name="0"; filename="a.txt"
+Content-Disposition: form-data; name="0"; filename="file.txt"
 Content-Type: text/plain
 
 Alpha file content.
