--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -20,7 +20,7 @@
 
 <p>This is the parent directory where you will find the <b>appwrite</b> directory, inside which there are <b>docker-compose.yml</b> and <b>.env</b> files.</p>
 
-<h3><a href="/docs/upgrade#install-newest-version" id="install-new-version">Installing the Next Version</a></h3>
+<h3><a href="/docs/upgrade#install-new-version" id="install-new-version">Installing the Next Version</a></h3>
 
 <ul class="phases clear" data-ui-phases>
     
@@ -66,7 +66,7 @@
 
 <p>Verify that the <b>STATUS</b> doesn't have any errors and all the <b>appwrite/appwrite</b> containers have version : <?php echo APP_VERSION_STABLE; ?></p>
 
-<h3><a href="/docs/upgrade#run-the-migration" id="migration">Running the Migration</a></h3>
+<h3><a href="/docs/upgrade#migration" id="migration">Running the Migration</a></h3>
 <div class="notice margin-bottom">
     <h3>Upgrading to a minor version</h3>
     <p>You do not need to run migration when upgrading to a minor version. For example, going from 0.13.0 to 0.13.2 would not require running migration.</p>
