--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -71,7 +71,7 @@
 
 <h4>JSON</h4>
 
-<p>There are two ways to make requests with the <b>application/json</b> content type. You can send a JSON object containing a query and optionally an operationName and variables, or an array of objects with the same structure.</p>
+<p>There are two ways to make requests with the <b>application/json</b> content type. You can send a JSON object containing a <b>query</b> and optionally an <b>operationName</b> and <b>variables</b>, or an array of objects with the same structure.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
