--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -4,7 +4,7 @@
 
 <h2><a href="/docs/graphql#requests" id="requests">Requests</a></h2>
 
-<p>GraphQL requests can be made in multiple ways, as every action executes through the same endpoint. However, all requests have a common structure.</p>
+<p>Although every query executes through the same endpoint, there are multiple ways to make a GraphQL request. All requests, however, share a common structure.</p>
 
 <table class="vertical full args">
     <thead>
@@ -67,7 +67,7 @@
 
 <h3><a href="/docs/graphql#post-requests" id="post-requests">POST Requests</a></h3>
 
-<p>The multiple ways to make a GraphQL POST request first break down by content type.</p>
+<p>There are multiple ways to make a GraphQL POST request, differentiated by content type.</p>
 
 <h4>JSON</h4>
 
