--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -56,7 +56,7 @@ X-Appwrite-Response-Format: 1.0.0
 </div>
 
 <h2>Server Authentication</h2>
-<p>Server integrations use API keys to authenticate and are typically used for backend appications.</p>
+<p>Server integrations use API keys to authenticate and are typically used for backend applications.</p>
 <p>You don't need to create an account session before making requests to Server APIs. Simply pass an <a href="/docs/keys">API key</a> in the <code>X-Appwrite-key: [API-KEY]</code> header with the appropriate scopes.</p>
 
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
