--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -3,7 +3,7 @@
 <p>The REST API allows you to access your Appwrite server through HTTP requests, without the need for an SDK. Each endpoint in the API represents a specific operation on a specific resource.</p>
 
 <h2><a href="/docs/rest#headers" id="headers">Headers</a></h2>
-<p>Appwrite's REST APIs expect certain headers to be attached to each request:</p>
+<p>Appwrite's REST APIs expect certain headers to be included with each request:</p>
 
 <table class="full text-size-small">
     <thead>
