--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -18,7 +18,7 @@
         <td>Required, provides the ID of your Appwrite Project to the REST API.</td>
     </tr>
     <tr>
-        <td><code>Content-type: application/json</code></td>
+        <td><code>Content-Type: application/json</code></td>
         <td>Required, declares content type of the HTTP request.</td>
     </tr>
     <tr>
