--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -333,5 +333,5 @@ Appwrite's SDKs provides a <code>Query</code> class to generate query strings. W
 Appwrite provides full REST API specs in the OpenAPI 3 and Swagger formats every release. These can be accessed through Appwrite's GitHub repository and rendered using a variety of parsers and tools.
 </p>
 <ul>
-    <li class="margin-bottom"><a href="https://github.com/appwrite/appwrite/tree/master/app/config/specs" target="_blank" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Find REST API specs for your Appwrite version</a></li>
+    <li class="margin-bottom"><a href="https://github.com/appwrite/appwrite/tree/master/app/config/specs" target="_blank" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Find the REST API specification for your Appwrite version</a></li>
 </ul>
