--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -324,7 +324,7 @@ Appwrite's SDKs provides a <code>Query</code> class to generate query strings. W
 
 <div class="notice margin-bottom">
     <h3>Best Practice</h3>
-    <p>When using greater than, greater than and equal to, less than, and less than and equal to, it is not recommended to pass in multiple values. While the API will accept multiple values and return results with <b>or logic</b>, it's best practice to pass in only one value for performance reasons.</p>
+    <p>When using greater than, greater than or equal to, less than, or less than or equal to, it is not recommended to pass in multiple values. While the API will accept multiple values and return results with <b>or logic</b>, it's best practice to pass in only one value for performance reasons.</p>
 </div>
 
 
