--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -257,7 +257,7 @@ Appwrite's SDKs have a helper <code>ID.unqiue()</code> to generate unique IDs. W
 Appwrite's SDKs provides a <code>Query</code> class to generate query strings. When using Appwrite without an SDK, you can template your own strings with the format below.
 </p>
 
-<p>Query strings are passed to Appwrite using the <code>queries</code> query parameters. You can attach multiple query strings under the <code>queries</code> query parameter.</p>
+<p>Query strings are passed to Appwrite using the <code>queries</code> parameter. You can attach multiple query strings by including the array parameter multiple times in the query string: <code>queries[]="..."&queries[]="..."</code></p>
 
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
