--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -86,7 +86,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
         <td>Required, contains the ID of your Appwrite Project to the REST API.</td>
     </tr>
     <tr>
-        <td><code>Content-type: multipart/form-data; boundary=[FORM-BOUNDRY]</code></td>
+        <td><code>Content-Type: multipart/form-data; boundary=[FORM-BOUNDRY]</code></td>
         <td>Required, contains the content type of the HTTP request and provides a <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST">boundry</a> which is used to parse the form data.</td>
     </tr>
     <tr>
