--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -90,7 +90,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
         <td>Required, contains the content type of the HTTP request and provides a <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST">boundry</a> which is used to parse the form data.</td>
     </tr>
     <tr>
-        <td><code>content-range: bytes [BYTE-RANGE]</code></td>
+        <td><code>Content-Range: bytes [BYTE-RANGE]</code></td>
         <td>Required, contains information about which bytes are being transmitted in the format <code>[FIRST-BYTE]-[LAST-BYTE]/[TOTAL-BYTES]</code>.</td>
     </tr>
     <tr>
