--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -98,7 +98,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
         <td>Required, contains which file this chunk belongs to.</td>
     </tr>
     <tr>
-        <td><code>X-Appwrite-key: [API-KEY]</code></td>
+        <td><code>X-Appwrite-Key: [API-KEY]</code></td>
         <td>Optional, used for authentication in server integrations. <b>Do not use API keys in client applications.</b></td>
     </tr>
     </tbody>
