--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -91,7 +91,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
     </tr>
     <tr>
         <td><code>Content-Range: bytes [BYTE-RANGE]</code></td>
-        <td>Required, contains information about which bytes are being transmitted in the format <code>[FIRST-BYTE]-[LAST-BYTE]/[TOTAL-BYTES]</code>.</td>
+        <td>Required, contains information about which bytes are being transmitted in this chunk, with the format <code>[FIRST-BYTE]-[LAST-BYTE]/[TOTAL-BYTES]</code>.</td>
     </tr>
     <tr>
         <td><code>x-appwrite-id: [FILE-ID]</code></td>
