--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -57,7 +57,7 @@ X-Appwrite-Response-Format: 1.0.0
 
 <h2>Server Authentication</h2>
 <p>Server integrations use API keys to authenticate and are typically used for backend applications.</p>
-<p>You don't need to create an account session before making requests to Server APIs. Simply pass an <a href="/docs/keys">API key</a> in the <code>X-Appwrite-key: [API-KEY]</code> header with the appropriate scopes.</p>
+<p>You don't need to create an account session before making requests to Server APIs. Simply pass an <a href="/docs/keys">API key</a> in the <code>X-Appwrite-Key: [API-KEY]</code> header with the appropriate scopes.</p>
 
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>GET /v1/databases/{databaseId}/collections/{collectionId}/documents  HTTP/1.1
