--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -120,7 +120,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
         <td>fileId</td>
         <td><code>[FILE-ID]</code></td>
         <td>n/a</td>
-        <td>Required, contains the file ID of the new file. Use <code>"unique()"</code> for a UUID.</td>
+        <td>Required, contains the file ID of the new file. Use <code>"unique()"</code> for a random ID.</td>
     </tr>
     <tr>
         <td>file</td>
