--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -144,7 +144,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>POST /v1/storage/buckets/default/files  HTTP/1.1
 Host: [HOSTNAME_OR_IP]
-Content-Type: multipart/form-data; boundary=---WD9146A
+Content-Type: multipart/form-data; boundary=----WebKitFormBoundarye0m6iNBQNHlzTpVM
 X-Appwrite-Project: demo-project
 content-range: bytes 10485760-12582912/12582912
 x-appwrite-id: 6369b0bc1dcf4ff59051
