--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -94,7 +94,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
         <td>Required, contains information about which bytes are being transmitted in this chunk, with the format <code>[FIRST-BYTE]-[LAST-BYTE]/[TOTAL-BYTES]</code>.</td>
     </tr>
     <tr>
-        <td><code>x-appwrite-id: [FILE-ID]</code></td>
+        <td><code>X-Appwrite-ID: [FILE-ID]</code></td>
         <td>Required, contains which file this chunk belongs to.</td>
     </tr>
     <tr>
