--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -146,7 +146,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
 Host: [HOSTNAME_OR_IP]
 Content-Type: multipart/form-data; boundary=----WebKitFormBoundarye0m6iNBQNHlzTpVM
 X-Appwrite-Project: demo-project
-content-range: bytes 10485760-12582912/12582912
+Content-Range: bytes 10485760-12582912/12582912
 x-appwrite-id: 6369b0bc1dcf4ff59051
 
 ------WebKitFormBoundarye0m6iNBQNHlzTpVM
