--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -147,7 +147,7 @@ Host: [HOSTNAME_OR_IP]
 Content-Type: multipart/form-data; boundary=----WebKitFormBoundarye0m6iNBQNHlzTpVM
 X-Appwrite-Project: demo-project
 Content-Range: bytes 10485760-12582912/12582912
-x-appwrite-id: 6369b0bc1dcf4ff59051
+X-Appwrite-ID: 6369b0bc1dcf4ff59051
 
 ------WebKitFormBoundarye0m6iNBQNHlzTpVM
 Content-Disposition: form-data; name="fileId"
