--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -9,29 +9,35 @@
     <thead>
     <tr>
         <td style="width: 300px">Header</td>
+        <td style="width: 80px"></td>
         <td>Description</td>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td><code>X-Appwrite-Project: [PROJECT-ID]</code></td>
-        <td><span class="tag red">required</span> Provides the ID of your Appwrite Project to the REST API.</td>
+        <td><span class="tag red">required</span></td>
+        <td>Provides the ID of your Appwrite Project to the REST API.</td>
     </tr>
     <tr>
         <td><code>Content-Type: application/json</code></td>
-        <td><span class="tag red">required</span> Declares content type of the HTTP request.</td>
+        <td><span class="tag red">required</span></td>
+        <td>Declares content type of the HTTP request.</td>
     </tr>
     <tr>
         <td><code>X-Appwrite-Key: [API-KEY]</code></td>
-        <td><span class="tag red">optional</span> Used for authentication in server integrations. <b>Do not use API keys in client applications.</b></td>
+        <td><span class="tag red">optional</span></td>
+        <td>Used for authentication in server integrations. <b>Do not use API keys in client applications.</b></td>
     </tr>
     <tr>
         <td><code>X-Appwrite-Response-Format: [VERSION-NUMBER]</code></td>
-        <td><span class="tag red">optional</span> Used for backwards compatibility. The response will be formatted to be compatible the provided version number.</td>
+        <td><span class="tag red">optional</span></td>
+        <td>Used for backwards compatibility. The response will be formatted to be compatible the provided version number.</td>
     </tr>
     <tr>
         <td><code>X-Fallback-Cookies: [FALLBACK-COOKIES]</code></td>
-        <td><span class="tag red">optional</span> Used in scenarios where browsers do not allow third-party cookies. Often used when there is no <a href="/docs/custom-domains">Custom Domain</a>.</td>
+        <td><span class="tag red">optional</span></td>
+        <td>Used in scenarios where browsers do not allow third-party cookies. Often used when there is no <a href="/docs/custom-domains">Custom Domain</a>.</td>
     </tr>
     </tbody>
 </table>
@@ -93,7 +99,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
     <thead>
     <tr>
         <td style="width: 280px">Header</td>
-        <td style="width: 90px"></td>
+        <td style="width: 80px"></td>
         <td>Description</td>
     </tr>
     </thead>
@@ -115,8 +121,8 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
     </tr>
     <tr>
         <td><code>X-Appwrite-ID: [FILE-ID]</code></td>
-        <td><span class="tag red">optional</span></td>
-        <td>Only needed in chunks following the initial. Contains ID of the file this chunk belongs to.</td>
+        <td><span class="tag red">required</span></td>
+        <td>Contains ID of the file this chunk belongs to.</td>
     </tr>
     <tr>
         <td><code>X-Appwrite-Key: [API-KEY]</code></td>
@@ -132,6 +138,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
     <thead>
     <tr>
         <td style="width: 100px">Key</td>
+        <td style="width: 80px"></td>
         <td style="width: 150px">Value</td>
         <td style="width: 100px">File Name</td>
         <td>Description</td>
@@ -140,21 +147,24 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
     <tbody>
     <tr>
         <td>fileId</td>
+        <td><span class="tag red">optional</span></td>
         <td><code>[FILE-ID]</code></td>
         <td>n/a</td>
-        <td><span class="tag red">required</span> Contains the file ID of the new file. Use <code>"unique()"</code> for a random ID.</td>
+        <td>Contains the file ID of the new file. Only used by file chunks following the first chunk uploaded.</td>
     </tr>
     <tr>
         <td>file</td>
+        <td><span class="tag red">required</span></td>
         <td><code>[CHUNK-DATA]</code></td>
         <td><code>[FILE-NAME]</code></td>
-        <td><span class="tag red">required</span> Contains file chunk data.</td>
+        <td>Contains file chunk data.</td>
     </tr>
     <tr>
         <td>permissions</td>
+        <td><span class="tag red">required</span></td>
         <td><code>[PERMISSION ARRAY]</code></td>
         <td>n/a</td>
-        <td><span class="tag red">required</span> Contains an array of permission strings about who can access the new file.</td>
+        <td>Contains an array of permission strings about who can access the new file.</td>
     </tr>
     </tbody>
 </table>
