--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -26,29 +26,29 @@
     </tr>
     <tr>
         <td><code>X-Appwrite-Key: [API-KEY]</code></td>
-        <td><span class="tag red">optional</span></td>
+        <td><span class="tag">optional</span></td>
         <td>Used for authentication in server integrations. <b>Do not use API keys in client applications.</b></td>
     </tr>
     <tr>
         <td><code>X-Appwrite-Response-Format: [VERSION-NUMBER]</code></td>
-        <td><span class="tag red">optional</span></td>
+        <td><span class="tag">optional</span></td>
         <td>Used for backwards compatibility. The response will be formatted to be compatible the provided version number.</td>
     </tr>
     <tr>
         <td><code>X-Fallback-Cookies: [FALLBACK-COOKIES]</code></td>
-        <td><span class="tag red">optional</span></td>
+        <td><span class="tag">optional</span></td>
         <td>Used in scenarios where browsers do not allow third-party cookies. Often used when there is no <a href="/docs/custom-domains">Custom Domain</a>.</td>
     </tr>
     </tbody>
 </table>
 
-<h3><a href="/docs/rest#no-headers" id="no-headers">Using Appwrite Without Headers</a></h3>
+<h2><a href="/docs/rest#no-headers" id="no-headers">Using Appwrite Without Headers</a></h2>
 <p>Some use cases do not allow the use of custom headers, such as when embedding images from Appwrite in HTML. In these cases, you can provide the Appwrite project ID using the query parameter <code>project</code>.</p>
 <div class="ide margin-bottom" data-lang="html" data-lang-label="HTML">
     <pre class="line-numbers"><code class="prism language-html" data-prism><?php echo htmlentities('<img src="https://[HOSTNAME_OR_IP]/v1/storage/buckets/[BUCKET_ID]/files/[FILE_ID]/preview?project=[PROJECT_ID]">'); ?></code></pre>
 </div>
 
-<h3>Client Authentication</h3>
+<h2><a href="/docs/rest#client-auth" id="client-auth">Client Authentication</a></h2>
 <p>You can create account sessions with POST requests to the <a href="docs/client/account">Account API</a>. Sessions are persisted using cookies. You can learn more about session persistence in the <a href="/docs/authentication#persistence">Authentication Guide</a>.</p>
 <p>The example below shows creating an account session with the <a href="/docs/client/account#accountCreateEmailSession">Create Account Session with Email</a> endpoint.</p>
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
@@ -77,7 +77,7 @@ X-Appwrite-Project: 5df5acd0d48c2
 X-Appwrite-Response-Format: 1.0.0</code></pre>
 </div>
 
-<h2>Server Authentication</h2>
+<h2><a href="/docs/rest#server-auth" id="server-auth">Server Authentication</a></h2>
 <p>Server integrations use API keys to authenticate and are typically used for backend applications.</p>
 <p>Server APIs are authenticated with API keys instead of account sessions. Simply pass an <a href="/docs/keys">API key</a> in the <code>X-Appwrite-key: [API-KEY]</code> header with the appropriate scopes.</p>
 
@@ -90,7 +90,7 @@ X-Appwrite-Key: [API_KEY]
 X-Appwrite-Response-Format: 1.0.0</code></pre>
 </div>
 
-<h2>File Handling</h2>
+<h2><a href="/docs/rest#file-handling" id="file-handling">File Handling</a></h2>
 <p>Appwrite implements resumable, chunked uploads for files larger than 5MB. Chunked uploads send files in chunks of 5MB to reduce memory footprint and increase resilience when handling large files. Appwrite SDKs will automatically handle chunked uploads but it is possible to implement this with the REST API directly.</p>
 
 <p>Upload endpoints in Appwrite such as Create File and Create Deployment are different from other endpoints. These endpoints take multipart form data instead of JSON data. To implement chunked uploads, you will need to implement the following headers:</p>
@@ -126,7 +126,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
     </tr>
     <tr>
         <td><code>X-Appwrite-Key: [API-KEY]</code></td>
-        <td><span class="tag red">optional</span></td>
+        <td><span class="tag">optional</span></td>
         <td>Used for authentication in server integrations. <b>Do not use API keys in client applications.</b></td>
     </tr>
     </tbody>
@@ -147,7 +147,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
     <tbody>
     <tr>
         <td>fileId</td>
-        <td><span class="tag red">optional</span></td>
+        <td><span class="tag">optional</span></td>
         <td><code>[FILE-ID]</code></td>
         <td>n/a</td>
         <td>Contains the file ID of the new file. Only used by file chunks following the first chunk uploaded.</td>
@@ -197,7 +197,7 @@ read("user:627a958ded6424a98a9f")
 ------WebKitFormBoundarye0m6iNBQNHlzTpVM--</code></pre>
 </div>
 
-<h2>Permissions</h2>
+<h2><a href="/docs/rest#permissions" id="permissions">Permissions</a></h2>
 
 <p>Appwrite SDKs have helpers to generate permission strings, but when using Appwrite without SDKs, you'd need to create the strings yourself.</p>
 
@@ -287,12 +287,14 @@ read("user:627a958ded6424a98a9f")
     <li class="margin-bottom"><a href="/docs/permissions" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn more about permissions</a></li>
 </ul>
 
-<h2>Unique ID</h2>
+<h2><a href="/docs/rest#unique-id" id="unique-id">Unique ID</a></h2>
+
 <p>
 Appwrite's SDKs have a helper <code>ID.unqiue()</code> to generate unique IDs. When using Appwrite without an SDK, pass the string <code>"unique()"</code> into the ID parameter.
 </p>
 
-<h2>Query Methods</h2>
+<h2><a href="/docs/rest#query" id="query">Query Methods</a></h2>
+
 <p>
 Appwrite's SDKs provides a <code>Query</code> class to generate query strings. When using Appwrite without an SDK, you can template your own strings with the format below.
 </p>
@@ -368,7 +370,8 @@ Appwrite's SDKs provides a <code>Query</code> class to generate query strings. W
 </div>
 
 
-<h2>OpenAPI and Swagger Specs</h2>
+<h2><a href="/docs/rest#specs" id="specs">OpenAPI and Swagger Specs</a></h2>
+
 <p>
 Appwrite provides a full REST API specification in the OpenAPI 3 and Swagger 2 formats every release. These can be accessed through Appwrite's GitHub repository and rendered using a variety of parsers and tools.
 </p>
