--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -110,7 +110,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
 <h2><a href="/docs/rest#file-handling" id="file-handling">File Handling</a></h2>
 <p>Appwrite implements resumable, chunked uploads for files larger than 5MB. Chunked uploads send files in chunks of 5MB to reduce memory footprint and increase resilience when handling large files. Appwrite SDKs will automatically handle chunked uploads, but it is possible to implement this with the REST API directly.</p>
 
-<p>Upload endpoints in Appwrite, such as <a href="/docs/client/storage#storageCreateFile">Create File</a> and <a href="/docs/client/functions#functionsCreateDeployment">Create Deployment</a>, are different from other endpoints. These endpoints take multipart form data instead of JSON data. To implement chunked uploads, you will need to implement the following headers:</p>
+<p>Upload endpoints in Appwrite, such as <a href="/docs/client/storage#storageCreateFile">Create File</a> and <a href="/docs/server/functions#functionsCreateDeployment">Create Deployment</a>, are different from other endpoints. These endpoints take multipart form data instead of JSON data. To implement chunked uploads, you will need to implement the following headers:</p>
 
 <table class="full text-size-small">
     <thead>
@@ -127,9 +127,9 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
         <td>Contains the ID of your Appwrite Project to the REST API.</td>
     </tr>
     <tr>
-        <td><code>Content-Type: multipart/form-data; boundary=[FORM-BOUNDRY]</code></td>
+        <td><code>Content-Type: multipart/form-data; boundary=[FORM-BOUNDARY]</code></td>
         <td><span class="tag red">required</span></td>
-        <td>Contains the content type of the HTTP request and provides a <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST">boundry</a> which is used to parse the form data.</td>
+        <td>Contains the content type of the HTTP request and provides a <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST">boundary</a> that is used to parse the form data.</td>
     </tr>
     <tr>
         <td><code>Content-Range: bytes [BYTE-RANGE]</code></td>
@@ -188,7 +188,7 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
 
 <p>While cURL and fetch are great tools to explore other REST endpoints, it's impractical to use for chunked file uploads because you need to split files into chunks.</p>
 
-<p>The multipart form data posted to file upload endpoints has the following format:</p>
+<p>The multipart form data posted to file upload endpoints have the following format:</p>
 
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>POST /v1/storage/buckets/default/files  HTTP/1.1
@@ -313,7 +313,7 @@ Appwrite's SDKs have a helper <code>ID.unqiue()</code> to generate unique IDs. W
 <h2><a href="/docs/rest#query" id="query">Query Methods</a></h2>
 
 <p>
-Appwrite's SDKs provides a <code>Query</code> class to generate query strings. When using Appwrite without an SDK, you can template your own strings with the format below.
+Appwrite's SDKs provide a <code>Query</code> class to generate query strings. When using Appwrite without an SDK, you can template your own strings with the format below.
 </p>
 
 <p>Query strings are passed to Appwrite using the <code>queries</code> parameter. You can attach multiple query strings by including the array parameter multiple times in the query string: <code>queries[]="..."&queries[]="..."</code></p>
