--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -63,7 +63,10 @@ Content-Type: application/json
 X-Appwrite-Project: 5df5acd0d48c2
 X-Appwrite-Response-Format: 1.0.0
 
-{"email":"example@email.com","password":"password"}</code></pre>
+{
+  "email": "example@email.com",
+  "password": "password"
+}</code></pre>
 </div>
 
 <p> You can find the cookies used to persist the new session in the response headers.</p>
