--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -111,7 +111,7 @@
 
 <h4>Multipart Form Data</h4>
 
-<p>The <b>multipart/form-data</b> content type can be used to upload files via GraphQL. In this case, the form data must include the following parts in addition to the files to upload:</p>
+<p>The <code>multipart/form-data</code> content type can be used to upload files via GraphQL. In this case, the form data must include the following parts in addition to the files to upload:</p>
 
 <table class="vertical full args">
     <thead>
